--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,42 @@
+body {
+  margin: 0;
+  font-family: Verdana, sans-serif
+}
+
+#dashboard-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.side-navbar {
+  display: flex;
+  flex-direction: column;
+  background-color: #242424;
+  color: #fff;
+  height: 100%;
+  width: 250px;
+}
+
+#logo-and-name-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+  gap: 5px;
+  border-bottom: 1px solid #333;
+}
+
+#nav-links {
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
+  gap: 10px;
+  cursor: pointer;
+}
+
+
+/*
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -66,3 +105,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+*/
