--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
   padding-top: 10px;
 }
 
-#nav-links a {
+#nav-links a, button {
   display: flex;
   flex-direction: column;
   color: white;
@@ -43,7 +43,28 @@ body {
   cursor: pointer;
 }
 
-#nav-links a:hover {
+#nav-links button {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background-color: #242424;
+  font-family: Verdana, sans-serif;
+  font-size: 16px;
+  border: none;
+}
+
+#workout-button {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#dropdown-menu-contents a {
+  background-color: #121212;
+  padding-left: 35px;
+}
+
+#nav-links a:hover, #nav-links button:hover {
   background-color: #333;
 }
 
