--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,18 @@ button {
   height: 100%;
 }
 
+#nav-drawer-button ul {
+  position: fixed;
+  top: 65px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(5px);
+  z-index: 1000;
+}
+
+
 .button-container {
   display: flex;
   justify-content: flex-end;
