--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,19 @@
   font-family: Verdana, sans-serif;
 }
 
-/* ↓ Side Navbar Start ↓ */
+.container {
+  display: flex;
+  flex-direction: row;
+  background-color: #212121;
+}
+
+.page-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+/* ↓ Menu.tsx - Side Navbar Start ↓ */
 .side-navbar {
   background-color: #242424;
   height: 100vh;
@@ -57,9 +69,9 @@ button {
 #workout-dropdown-menu a {
   padding-left: 30px;
 }
-/* ↑ Side Navbar End ↑ */
+/* ↑ Menu.tsx - Side Navbar End ↑ */
 
-/* ↓ Nav Drawer Start ↓ */
+/* ↓ Menu.tsx - Nav Drawer Start ↓ */
 .nav-drawer {
   display: flex;
   justify-content: space-between;
@@ -94,9 +106,9 @@ button {
   display: flex;
   justify-content: flex-end;
 }
-/* ↑ Nav Drawer End ↑ */
+/* ↑ Menu.tsx - Nav Drawer End ↑ */
 
-/* ↓ Resize Logic Start ↓ */
+/* ↓ Menu.tsx - Resize Logic Start ↓ */
 @media (max-width: 768px) {
   .side-navbar {
     display: none;
@@ -106,4 +118,98 @@ button {
     display: flex;
   }
 }
-/* ↑ Resize Logic End ↑ */
+/* ↑ Menu.tsx -Resize Logic End ↑ */
+
+/* ↓ CreateWorkout.tsx - Main Content Start ↓ */
+.create-workout-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  width: 50%;
+}
+
+.create-workout-container h1 {
+  color: white;
+}
+
+.create-workout-container #mesocycle-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  background-color: transparent;
+  padding: 10px;
+  border-radius: 5px;
+  gap: 10px;
+}
+
+.create-workout-container .mesocycle-option {
+  height: 50px;
+  width: 35%;
+  justify-content: center;
+  background-color: #EA3D26;
+  color: white;
+  margin: 0 10px;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 16px;
+
+  &:hover {
+    background-color: #ea3d26bb;
+  }
+}
+
+.create-workout-container #template-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #2A2A2A;
+  border-radius: 5px;
+}
+
+.create-workout-container .template-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  color: white;
+  border-bottom: 1px solid #333;
+  padding: 20px 0;
+}
+
+.create-workout-container .template-container .split-type {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 10px;
+  width: 10%;
+  margin-left: 10px;
+  font-size: 10px;
+}
+
+.create-workout-container .template-container .split-name {
+  margin-left: 10px;
+  padding: 10px 0;
+
+}
+
+.create-workout-container .template-container .split-tags {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 10px;
+  width: 100%;
+  margin-left: 5px;
+  padding: 5px;
+  font-size: 10px;
+}
+
+.create-workout-container .template-container .split-tags span {
+  background-color: #444444;
+  padding: 5px;
+  margin-right: 5px;
+  border-radius: 5px;
+}
+
+/* ↑ CreateWorkout.tsx - Main Content End ↑ */
